--- a/mobile/src/main/res/layout/edit_workout_add_item_view.xml
+++ b/mobile/src/main/res/layout/edit_workout_add_item_view.xml
@@ -10,7 +10,9 @@
             android:clickable="true"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:id="@+id/edit_workout_add_item_view_button"
+            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
+            android:textSize="16sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/add_exercise"/>
+            android:text="@string/add"/>
 </LinearLayout>
