--- a/mobile/src/main/res/layout/workout_item_view.xml
+++ b/mobile/src/main/res/layout/workout_item_view.xml
@@ -6,11 +6,8 @@
     <data>
 
         <variable
-                name="viewModel"
-                type="vzijden.workout.view.schedule.workout.exercise.ExerciseItemViewModel"/>
-        <variable
-                name="editWorkoutPresenter"
-                type="vzijden.workout.view.schedule.workout.EditWorkoutPresenter"/>
+                name="exerciseItemPresenter"
+                type="vzijden.workout.view.schedule.workout.EditWorkoutPresenter.ExerciseItemPresenter"/>
     </data>
 
     <vzijden.workout.view.schedule.workout.exercise.ExerciseItemView
@@ -18,16 +15,19 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
             android:clickable="true"
-            android:onClick="@{() -> editWorkoutPresenter.onExerciseClicked(obj)}">
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClick="@{() -> exerciseItemPresenter.onClick(exerciseItemPresenter.index)}">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="20sp"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
+                android:fontFamily="@font/work_sans_bold"
                 android:textSize="28sp"
+                android:textColor="@color/colorAccent"
                 android:id="@+id/schedule_item_view_workout_name_text_field"
-                android:text="@={viewModel.index}"
+                android:text="@{String.valueOf(exerciseItemPresenter.index + 1)}"
                 tools:text="1"/>
 
         <com.google.android.material.card.MaterialCardView
@@ -39,39 +39,57 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
+                style="@style/Widget.MaterialComponents.CardView"
+                android:transitionName="@{exerciseItemPresenter.exerciseName + `cardview`}"
                 app:cardCornerRadius="0dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:padding="8dp"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"
                     android:layout_height="match_parent">
 
                 <TextView
-                        tools:text="Bench Press"
-                        android:textColor="@color/text_dark"
-                        android:text="@={viewModel.exerciseName}"
+                        app:layout_constraintTop_toTopOf="@+id/parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/workout_item_view_name"/>
+                        android:textSize="15sp"
+                        android:textColor="#232F34"
+                        android:id="@+id/workout_item_view_muscle_group"
+                        android:text="@{exerciseItemPresenter.muscleGroup}"
+                        tools:text="Chest" android:fontFamily="@font/work_sans"/>
 
                 <TextView
-                        app:layout_constraintTop_toBottomOf="@+id/workout_item_view_name"
+                        app:layout_constraintTop_toBottomOf="@id/workout_item_view_muscle_group"
+                        android:textSize="21sp"
+                        android:textStyle="bold"
+                        android:paddingBottom="8dp"
+                        tools:text="Bench Press"
+                        android:textColor="@color/text_dark"
+                        android:text="@{exerciseItemPresenter.exerciseName}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:id="@+id/workout_item_view_muscle_group"
-                        android:text="@={viewModel.muscleGroup}"
-                        tools:text="Chest"/>
+                        android:transitionName="@{exerciseItemPresenter.exerciseName + `textview`}"
+                        android:id="@+id/workout_item_view_name" android:fontFamily="@font/work_sans_bold"/>
+
+                <View
+                        android:id="@+id/tile_divider"
+                        android:layout_height="1dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/workout_item_view_name"
+                        android:background="?android:attr/dividerVertical"
+                        android:layout_width="match_parent"/>
 
                 <androidx.recyclerview.widget.RecyclerView
+                        android:paddingTop="8dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxHeight="100dp"
-                        app:layout_constraintTop_toBottomOf="@id/workout_item_view_muscle_group"
-                        android:id="@+id/workout_item_view_sets_list"
-                        app:data="@{viewModel.sets}"
-                        app:changedPositions="@{viewModel.changedPositions}">
-                </androidx.recyclerview.widget.RecyclerView>
+                        app:data="@{exerciseItemPresenter.sets}"
+                        app:layout_constraintTop_toBottomOf="@id/tile_divider"
+                        android:id="@+id/workout_item_view_sets_list"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
     </vzijden.workout.view.schedule.workout.exercise.ExerciseItemView>
