--- a/mobile/src/main/res/values/preloaded_fonts.xml
+++ b/mobile/src/main/res/values/preloaded_fonts.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/raleway_bold</item>
         <item>@font/raleway_medium</item>
         <item>@font/raleway_thin</item>
+        <item>@font/work_sans</item>
+        <item>@font/work_sans_bold</item>
     </array>
 </resources>
