--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,11 +1,35 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Base.Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="actionBarStyle">@style/actionbar</item>
+    </style>
+
+    <style name="headerText">
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:textSize">31sp</item>
+        <item name="android:fontFamily">@font/raleway_medium</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:paddingTop">32dp</item>
+        <item name="android:paddingBottom">32dp</item>
+    </style>
+
+    <style name="actionbar" parent="@style/Base.Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="background">@color/colorPrimaryDark</item>
+        <item name="android:elevation">0dp</item>
+        <item name="elevation">0dp</item>
+        <item name="android:titleTextStyle">@style/actionbar.titletextstyle</item>
+    </style>
+
+    <style name="actionbar.titletextstyle" parent="@style/TextAppearance.AppCompat.Title">
+        <item name="android:textColor">#fff</item>
     </style>
 
 </resources>
