--- a/mobile/src/main/res/layout/activity_edit_workout.xml
+++ b/mobile/src/main/res/layout/activity_edit_workout.xml
@@ -61,7 +61,7 @@
             </FrameLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                    android:nestedScrollingEnabled="false"
+                    android:nestedScrollingEnabled="true"
                     android:paddingTop="8dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="14dp"
@@ -69,7 +69,7 @@
                     android:layout_weight="1"
                     app:data="@{viewModel.exerciseItemPresenters}"
                     app:changedPositions="@{viewModel.changedPositions}"
-                    app:onItemAdded="@{() -> viewModel.onExerciseAdded()}"
+                    app:onItemAdded="@{() -> viewModel.onAddExerciseClick()}"
                     android:layout_height="0dp"
                     android:id="@+id/edit_schedule_recyclerView"/>
         </LinearLayout>
