--- a/mobile/src/main/res/layout/item_select_exercises_activity.xml
+++ b/mobile/src/main/res/layout/item_select_exercises_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -15,6 +16,13 @@
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                tools:text="Bench press"
                 android:text="@{exercise.name}"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Biceps"
+                android:textStyle="bold"
+                app:muscleGroups="@{exercise.muscleGroups}"/>
     </LinearLayout>
 </layout>
