--- a/mobile/src/main/res/layout/activity_edit_workout.xml
+++ b/mobile/src/main/res/layout/activity_edit_workout.xml
@@ -10,7 +10,7 @@
                 type="vzijden.workout.view.schedule.workout.EditWorkoutPresenter"/>
     </data>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
             android:fillViewport="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -61,17 +61,18 @@
             </FrameLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                    android:nestedScrollingEnabled="true"
+                    android:overScrollMode="never"
                     android:paddingTop="8dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="14dp"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     app:data="@{viewModel.exerciseItemPresenters}"
+                    app:onItemDeleted="@{viewModel.onItemDeletedListener}"
                     app:changedPositions="@{viewModel.changedPositions}"
                     app:onItemAdded="@{() -> viewModel.onAddExerciseClick()}"
                     android:layout_height="0dp"
                     android:id="@+id/edit_schedule_recyclerView"/>
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </layout>
