--- a/mobile/src/main/res/layout/schedule_item_view.xml
+++ b/mobile/src/main/res/layout/schedule_item_view.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
                 name="scheduleItemView"
-                type="vzijden.workout.view.main.SchedulePresenter.ScheduleItemView"/>
+                type="vzijden.workout.view.home.SchedulePresenter.ScheduleItemView"/>
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -11,9 +11,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp"
+        android:paddingEnd="8dp"
         android:paddingTop="32dp"
-        android:paddingBottom="32dp"
+        android:paddingBottom="8dp"
         android:onClick="@{() -> scheduleItemView.onClick()}"
         android:clickable="true"
         android:focusable="true">
@@ -27,6 +27,7 @@
             android:text="@{scheduleItemView.workoutName}"
             android:textColor="@color/text_dark"/>
     <TextView
+            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/day"
@@ -36,6 +37,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/schedule_item_view_workout_name_text_field"/>
     <TextView
+            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="1"
@@ -46,6 +48,17 @@
             android:id="@+id/schedule_item_view_workout_day_text_field"
             app:layout_constraintStart_toEndOf="@id/schedule_item_view_workout_day_field"
             app:layout_constraintTop_toBottomOf="@+id/schedule_item_view_workout_name_text_field"/>
+    <com.google.android.material.button.MaterialButton
+            app:layout_constraintTop_toBottomOf="@id/schedule_item_view_workout_day_text_field"
+            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp"
+            android:onClick="@{() -> scheduleItemView.onStartClick()}"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/start"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
