--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="@style/Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -9,6 +9,7 @@
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="actionBarStyle">@style/actionbar</item>
+        <item name="android:statusBarColor">@color/background</item>
     </style>
 
     <style name="headerText">
@@ -21,15 +22,15 @@
     </style>
 
     <style name="actionbar" parent="@style/Base.Widget.AppCompat.ActionBar">
-        <item name="android:background">@color/colorPrimaryDark</item>
-        <item name="background">@color/colorPrimaryDark</item>
+        <item name="android:background">@color/background</item>
+        <item name="background">@color/background</item>
         <item name="android:elevation">0dp</item>
         <item name="elevation">0dp</item>
         <item name="android:titleTextStyle">@style/actionbar.titletextstyle</item>
     </style>
 
     <style name="actionbar.titletextstyle" parent="@style/TextAppearance.AppCompat.Title">
-        <item name="android:textColor">#fff</item>
+        <item name="android:textColor">#000</item>
     </style>
 
 </resources>
