--- a/mobile/src/main/res/layout/activity_current_workout.xml
+++ b/mobile/src/main/res/layout/activity_current_workout.xml
@@ -24,7 +24,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                         android:overScrollMode="never"
-                        app:data="@{currentWorkoutPresenter.currentExercisesPresenters}"
+                        app:data="@{currentWorkoutPresenter.registrations}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/activity_current_workout_recyclerview"/>
@@ -70,7 +70,7 @@
                     android:textSize="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{currentWorkoutPresenter.currentRegistration.registration.exercise.name}"/>
+                    android:text="@{currentWorkoutPresenter.currentRegistration.exercise.name}"/>
             <EditText
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toStartOf="parent"
