--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
     <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
-                                       app:title="@string/schedule"
+                                       app:title="@string/schedulePojo"
                                        style="@style/actionbar"/>
 
     <androidx.viewpager.widget.ViewPager
