--- a/mobile/src/main/res/layout/current_exercise_set_item_logged.xml
+++ b/mobile/src/main/res/layout/current_exercise_set_item_logged.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-                name="loggedSet"
-                type="vzijden.workout.data.model.LoggedSet"/>
+                name="loggedSetPojo"
+                type="vzijden.PlannedWorkout.domain.model.LoggedSet"/>
         <variable
                 name="index"
                 type="Integer"/>
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/set_item_view_amount"
                     tools:text="8"
-                    android:text="@{String.valueOf(loggedSet.set.reps)}"/>
+                    android:text="@{String.valueOf(loggedSetPojo.plannedSet.reps)}"/>
 
             <Space
                     android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/set_item_view_weight"
                     tools:text="8"
-                    android:text="@{String.valueOf(loggedSet.weight)}"/>
+                    android:text="@{String.valueOf(loggedSetPojo.weight)}"/>
             <TextView
                     android:textStyle="bold"
                     android:layout_marginStart="8dp"
